--- a/templates/egresos/compras/cpb_compra_listado.html
+++ b/templates/egresos/compras/cpb_compra_listado.html
@@ -44,16 +44,16 @@
                                 <th class="no-sort text-center" data-priority="1"></th>
                                 <th class="no-sort text-center" data-priority="2"></th>
                                 <th class="no-sort text-center" data-priority="3"></th>
-                                <th class="text-center" data-priority="6">Estado</th>
-                                <th class="text-center" data-priority="4">Fecha CPB</th>
-                                <th class="text-center" data-priority="8">Tipo</th>
-                                <th data-priority="5">Nº CPB</th>
-                                <th data-priority="9">Proveedor</th>
-                                <th class="text-right" data-priority="7">Saldo</th> 
-                                <th class="text-right" data-priority="10">Total</th>                               
-                                <th class="text-right" >Importe</th>
-                                <th class="text-right" data-priority="11">IVA</th>
-                                <th class="text-right">Perc./Imp.</th>                                
+                                <th class="imprimir text-center" data-priority="6">Estado</th>
+                                <th class="imprimir text-center" data-priority="4">Fecha CPB</th>
+                                <th class="imprimir text-center" data-priority="8">Tipo</th>
+                                <th class="imprimir" data-priority="5">Nº CPB</th>
+                                <th class="imprimir" data-priority="9">Proveedor</th>
+                                <th class="imprimir text-right" data-priority="7">Saldo</th> 
+                                <th class="imprimir text-right" data-priority="10">Total</th>                               
+                                <th class="imprimir text-right" >Importe</th>
+                                <th class="imprimir text-right" data-priority="11">IVA</th>
+                                <th class="imprimir text-right">Perc./Imp.</th>                                
                                 <th>Descripción</th>                                
                             </tr>
                         </thead>
