--- a/templates/entidades/lista_vendedores.html
+++ b/templates/entidades/lista_vendedores.html
@@ -21,11 +21,11 @@
                         <thead>
                             <tr>
                                 <th></th>
-                                <th>Código</th>
-                                <th>Apellido y Nombre</th>
-                                <th>Dirección</th>           
-                                <th>CP/Localidad</th>           
-                                <th>Provincia</th>           
+                                <th class="imprimir">Código</th>
+                                <th class="imprimir">Apellido y Nombre</th>
+                                <th class="imprimir">Dirección</th>           
+                                <th class="imprimir">CP/Localidad</th>           
+                                <th class="imprimir">Provincia</th>           
                             </tr>
                         </thead>
                         <tbody>
@@ -145,7 +145,7 @@ var tabla = $('#dataTables-primary').DataTable({
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -185,7 +185,7 @@ var tabla = $('#dataTables-primary').DataTable({
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible'},
+                    exportOptions: { columns: '.imprimir'},
                     orientation: 'landscape',
                     className: 'btnToolbar',                    
                 },
@@ -193,7 +193,7 @@ var tabla = $('#dataTables-primary').DataTable({
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
