--- a/templates/ingresos/cobranzas/cpb_rec_cobranza_listado.html
+++ b/templates/ingresos/cobranzas/cpb_rec_cobranza_listado.html
@@ -31,12 +31,12 @@
                         <thead>
                             <tr>
                                 <th class="no-sort"></th>                                                                 
-                                <th class="text-center">Fecha Emisión</th>
-                                <th>Nº Recibo</th>
-                                <th>Cliente</th>
-                                <th class="text-right">Total</th>
-                                <th class="text-right">Importe</th>
-                                <th class="text-right">Retenc</th>
+                                <th class="imprimir text-center">Fecha Emisión</th>
+                                <th class="imprimir">Nº Recibo</th>
+                                <th class="imprimir">Cliente</th>
+                                <th class="imprimir text-right">Total</th>
+                                <th class="imprimir text-right">Importe</th>
+                                <th class="imprimir text-right">Retenc</th>
                                 <th>Comprobantes</th>            
                                 <th>Descripción</th>                    
                                 
