--- a/templates/ingresos/ventas/cpb_venta_listado.html
+++ b/templates/ingresos/ventas/cpb_venta_listado.html
@@ -48,7 +48,7 @@
                                     <th class="no-sort text-center" data-priority="2"></th>
                                     <th class="no-sort text-center" data-priority="3"></th>
                                     <th class="imprimir text-center" data-priority="6">Cobranza</th>
-                                    <th class="imprimir text-center" data-priority="8">CAE</th>
+                                    <th class="text-center" data-priority="8">CAE</th>
                                     <th class="imprimir text-center" data-priority="4">Fecha CPB</th>
                                     <th class="imprimir text-center" data-priority="8" >Tipo</th>
                                     <th class="imprimir text-left" data-priority="5">Nº CPB</th>
