--- a/templates/entidades/lista_clientes.html
+++ b/templates/entidades/lista_clientes.html
@@ -24,15 +24,15 @@
                         <thead >
                             <tr>
                                 <th></th>
-                                <th>Código</th>
-                                <th>Apellido y Nombre</th>
-                                <th>Tipo/NºDoc.</th>
-                                <th>CUIT</th>
-                                <th>Condic.IVA</th>
-                                <th>EMail</th>
-                                <th>Dirección</th>           
-                                <th>CP/Localidad</th>           
-                                <th>Provincia</th>           
+                                <th class="imprimir">Código</th>
+                                <th class="imprimir">Apellido y Nombre</th>
+                                <th class="imprimir">Tipo/NºDoc.</th>
+                                <th class="imprimir">CUIT</th>
+                                <th class="imprimir">Condic.IVA</th>
+                                <th class="imprimir">EMail</th>
+                                <th class="imprimir">Dirección</th>           
+                                <th class="imprimir">CP/Localidad</th>           
+                                <th class="imprimir">Provincia</th>           
                             </tr>
                         </thead>
                         <tbody>
@@ -164,7 +164,7 @@ var tabla = $('#dataTables-primary').DataTable({
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -204,7 +204,7 @@ var tabla = $('#dataTables-primary').DataTable({
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible'},
+                    exportOptions: { columns: '.imprimir'},
                     orientation: 'landscape',
                     className: 'btnToolbar',                    
                 },
@@ -212,7 +212,7 @@ var tabla = $('#dataTables-primary').DataTable({
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
