--- a/templates/general/lista_pto_vta.html
+++ b/templates/general/lista_pto_vta.html
@@ -23,11 +23,11 @@
                             <thead>
                                 <tr>
                                     <th width="5%" ></th>
-                                    <th>Número</th>
-                                    <th>Nombre</th>
-                                    <th>Sucursal</th>
-                                    <th>Dirección</th>
-                                    <th>Factura Electrónica</th>
+                                    <th class="imprimir">Número</th>
+                                    <th class="imprimir">Nombre</th>
+                                    <th class="imprimir">Sucursal</th>
+                                    <th class="imprimir">Dirección</th>
+                                    <th class="imprimir">Factura Electrónica</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -184,7 +184,7 @@ $(document).ready(function() {
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -224,14 +224,14 @@ $(document).ready(function() {
                         extend:    'pdfHtml5',
                         text:      '<i class="fa fa-file-pdf-o"></i>',
                         titleAttr: 'PDF',footer: true,
-                        exportOptions: { columns: ':visible' },
+                        exportOptions: { columns: '.imprimir' },
                         className: 'btnToolbar',                    
                     },
                     {
                         extend: 'print',
                         text:      '<i class="fa fa-print"></i>',
                         titleAttr: 'Imprimir',
-                        exportOptions: { columns: ':visible' },
+                        exportOptions: { columns: '.imprimir' },
                         className: 'btnToolbar',                    
                     },
                 ],
