--- a/templates/general/cta_cte/cta_cte_proveedores.html
+++ b/templates/general/cta_cte/cta_cte_proveedores.html
@@ -32,13 +32,13 @@
                     <table id="dataTables-cpb_venta" class="table table-striped compact table-hover table-no-bordered tabla_nueva nowrap">         
                         <thead>
                             <tr>                               
-                                <th class="text-center">Fecha</th>                                
-                                <th style="width:10%;" >Comprobante</th>                                
-                                <th class="">Tipo</th>
-                                <th class="">Detalle</th>
-                                <th class="text-right">Debe</th>                                                               
-                                <th class="text-right">Haber</th>                                                               
-                                <th class="text-right">Saldo</th>                                                          
+                                <th class="imprimir text-center">Fecha</th>                                
+                                <th style="width:10%;" class="imprimir">Comprobante</th>                                
+                                <th class="imprimir">Tipo</th>
+                                <th class="imprimir">Detalle</th>
+                                <th class="imprimir text-right">Debe</th>                                                               
+                                <th class="imprimir text-right">Haber</th>                                                               
+                                <th class="imprimir text-right">Saldo</th>                                                          
                             </tr>
                         </thead>
                         <tbody>                        
@@ -178,16 +178,51 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     extend:    'excel',
                     text:      '<i class="fa fa-file-excel-o"></i>',
                     titleAttr: 'Excel',
-                    exportOptions: { columns: ':visible', },
-
-                    className: 'btnToolbar',                    
+                    filename: 'CTACTE_PROVEEDORES',                    
+                    exportOptions: {  modifier: {
+                                        page: 'current'
+                                    }, 
+                                      columns: '.imprimir',
+                                      format: {
+                                      body: function(data, row, column, node) {
+                                        var floatVal = function (i) {
+                                            if (typeof i === "number") {
+                                                return i;
+                                            } else if (typeof i === "string") {
+                                                i = i.replace("$", "")
+                                                i = i.replace(",", "")
+                                                i = i.replace(".", "")
+                                                var result = parseFloat(i)/100;
+                                                // console.log(result);
+                                                if (isNaN(result)) {
+                                                    try {
+                                                        var result = $jq(i).text();
+                                                        result = parseFloat(result);
+                                                        if (isNaN(result)) { result = 0 };
+                                                        return result * 1;
+                                                    } catch (error) {
+                                                        return 0;
+                                                    }
+                                                } else {
+                                                    return result * 1;
+                                                }
+                                            } else {
+                                                alert("Unhandled type for totals [" + (typeof i) + "]");
+                                                return 0
+                                            }
+                                        };
+                                          data = $('<p>' + data + '</p>').text();
+                                          return (node.className=='importe') ? floatVal(data)  : data;
+                                      }
+                                    }},
+                    className: 'btnToolbar',     
                 },
                
                 {
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',
-                    exportOptions: { columns: ':visible'},
+                    exportOptions: { columns: '.imprimir'},
                     orientation: 'landscape',
                     className: 'btnToolbar',                    
                 },
@@ -195,7 +230,7 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
