--- a/templates/general/cta_cte/saldos_proveedores.html
+++ b/templates/general/cta_cte/saldos_proveedores.html
@@ -31,8 +31,8 @@
             <table id="dataTables-cpb_venta" class="table dataTable  table-striped table-hover table-no-bordered tabla_cpbs tabla_nueva nowrap">         
                 <thead>
                     <tr>
-                        <th class="">Proveedor</th>                                                             
-                        <th class="text-right">Saldo Pendiente</th>                                                                                                                             
+                        <th class="imprimir">Proveedor</th>                                                             
+                        <th class="imprimir text-right">Saldo Pendiente</th>                                                                                                                             
                     </tr>
                 </thead>
                 <tbody>
@@ -131,16 +131,51 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     extend:    'excel',
                     text:      '<i class="fa fa-file-excel-o"></i>',
                     titleAttr: 'Excel',
-                    exportOptions: { columns: ':visible', },
-
-                    className: 'btnToolbar',                    
+                    filename: 'SALDOS_PROOVEDORES',                    
+                    exportOptions: {  modifier: {
+                                        page: 'current'
+                                    }, 
+                                      columns: '.imprimir',
+                                      format: {
+                                      body: function(data, row, column, node) {
+                                        var floatVal = function (i) {
+                                            if (typeof i === "number") {
+                                                return i;
+                                            } else if (typeof i === "string") {
+                                                i = i.replace("$", "")
+                                                i = i.replace(",", "")
+                                                i = i.replace(".", "")
+                                                var result = parseFloat(i)/100;
+                                                // console.log(result);
+                                                if (isNaN(result)) {
+                                                    try {
+                                                        var result = $jq(i).text();
+                                                        result = parseFloat(result);
+                                                        if (isNaN(result)) { result = 0 };
+                                                        return result * 1;
+                                                    } catch (error) {
+                                                        return 0;
+                                                    }
+                                                } else {
+                                                    return result * 1;
+                                                }
+                                            } else {
+                                                alert("Unhandled type for totals [" + (typeof i) + "]");
+                                                return 0
+                                            }
+                                        };
+                                          data = $('<p>' + data + '</p>').text();
+                                          return (node.className=='importe') ? floatVal(data)  : data;
+                                      }
+                                    }},
+                    className: 'btnToolbar',     
                 },
                
                 {
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',
-                    exportOptions: { columns: ':visible'},
+                    exportOptions: { columns: '.imprimir'},
                     orientation: 'landscape',
                     className: 'btnToolbar',                    
                 },
@@ -148,7 +183,7 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
