--- a/templates/general/lista_formapago.html
+++ b/templates/general/lista_formapago.html
@@ -17,10 +17,10 @@
                         <thead>
                             <tr>
                                 <th width="5%" ></th>
-                                <th width="5%" class="text-right">Código</th>
-                                <th>Nombre</th>               
-                                <th>Cuenta x Defecto</th> 
-                                <th>Signo</th>               
+                                <th width="5%" class="imprimir text-right">Código</th>
+                                <th class="imprimir">Nombre</th>               
+                                <th class="imprimir">Cuenta x Defecto</th> 
+                                <th class="imprimir">Signo</th>               
                             </tr>
                         </thead>
                         <tbody>
@@ -134,7 +134,7 @@ var tabla = $('#dataTables-primary').DataTable({
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -174,14 +174,14 @@ var tabla = $('#dataTables-primary').DataTable({
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
                 {
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
