--- a/templates/general/movimientos/movimientos_listado.html
+++ b/templates/general/movimientos/movimientos_listado.html
@@ -48,18 +48,18 @@
                             <tr>
                                 <th class="no-sort text-center"></th>
                                 <th class="no-sort text-center"></th>                                                                
-                                <th class="text-center">Fecha CPB</th>
-                                <th>Nº CPB</th>
-                                <th class="text-center">Forma Pago/Cobro</th>
-                                <th class="text-center">Cta.Egreso/Desde</th>
-                                <th class="text-center">Cta.Ingreso/Hacia</th>                                
-                                <th class="text-right">Importe</th>
-                                <th class="text-right">Detalle</th>
-                                <th class="text-right">Fecha MDP</th>
-                                <th class="text-right">Banco</th>
-                                <th class="text-right">Cheque</th>                                                                
-                                <th>Observaciones</th>                                
-                                <th>Usuario</th>
+                                <th class="imprimir text-center">Fecha CPB</th>
+                                <th class="imprimir">Nº CPB</th>
+                                <th class="imprimir text-center">Forma Pago/Cobro</th>
+                                <th class="imprimir text-center">Cta.Egreso/Desde</th>
+                                <th class="imprimir text-center">Cta.Ingreso/Hacia</th>                                
+                                <th class="imprimir text-right">Importe</th>
+                                <th class="imprimir text-right">Detalle</th>
+                                <th class="imprimir text-right">Fecha MDP</th>
+                                <th class="imprimir text-right">Banco</th>
+                                <th class="imprimir text-right">Cheque</th>                                                                
+                                <th class="imprimir">Observaciones</th>                                
+                                <th class="imprimir">Usuario</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -214,7 +214,7 @@ var tabla = $('#dataTables-cpb_movimientos').DataTable({
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -254,7 +254,7 @@ var tabla = $('#dataTables-cpb_movimientos').DataTable({
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible'},
+                    exportOptions: { columns: '.imprimir'},
                     orientation: 'landscape',
                     className: 'btnToolbar',                    
                 },
@@ -262,7 +262,7 @@ var tabla = $('#dataTables-cpb_movimientos').DataTable({
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
