--- a/templates/general/pto_vta/pto_vta_listado.html
+++ b/templates/general/pto_vta/pto_vta_listado.html
@@ -23,12 +23,12 @@
                             <thead>
                                 <tr>
                                     <th width="5%" ></th>
-                                    <th>Número</th>
-                                    <th>CUIT</th>
-                                    <th>Nombre</th>
-                                    <th>Sucursal</th>
-                                    <th>Dirección</th>
-                                    <th>Factura Electrónica</th>
+                                    <th class="imprimir">Número</th>
+                                    <th class="imprimir">CUIT</th>
+                                    <th class="imprimir">Nombre</th>
+                                    <th class="imprimir">Sucursal</th>
+                                    <th class="imprimir">Dirección</th>
+                                    <th class="imprimir">Factura Electrónica</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -77,10 +77,10 @@
                         <table width="100%" id="dataTables-numeros" class="table table-striped table-hover table-condensed table-no-bordered tabla_nueva nowrap">         
                             <thead>
                                 <tr>
-                                    <th>Pto.Vta.</th>
-                                    <th>Tipo</th>
-                                    <th>Letra</th>
-                                    <th class="text-right">Último Nº</th>
+                                    <th class="imprimir">Pto.Vta.</th>
+                                    <th class="imprimir">Tipo</th>
+                                    <th class="imprimir">Letra</th>
+                                    <th class="imprimir text-right">Último Nº</th>
                                     <th class="no-sort text-right" ></th>
                                 </tr>
                             </thead>
@@ -226,14 +226,14 @@ $(document).ready(function() {
                         extend:    'pdfHtml5',
                         text:      '<i class="fa fa-file-pdf-o"></i>',
                         titleAttr: 'PDF',footer: true,
-                        exportOptions: { columns: ':visible' },
+                        exportOptions: { columns: '.imprimir' },
                         className: 'btnToolbar',                    
                     },
                     {
                         extend: 'print',
                         text:      '<i class="fa fa-print"></i>',
                         titleAttr: 'Imprimir',
-                        exportOptions: { columns: ':visible' },
+                        exportOptions: { columns: '.imprimir' },
                         className: 'btnToolbar',                    
                     },
                 ],
@@ -283,14 +283,14 @@ $(document).ready(function() {
                         extend:    'copyHtml5',
                         text:      '<i class="fa fa-files-o"></i>',
                         titleAttr: 'Copiar',
-                        exportOptions: { columns: ':visible' },
+                        exportOptions: { columns: '.imprimir' },
                         className: 'btnToolbar',                    
                     },
                     {
                         extend:    'excelHtml5',
                         text:      '<i class="fa fa-file-excel-o"></i>',
                         titleAttr: 'Excel',
-                        exportOptions: { columns: ':visible' },
+                        exportOptions: { columns: '.imprimir' },
                         className: 'btnToolbar',                    
                     },
 
