--- a/templates/ingresos/remitos/cpb_remito_listado.html
+++ b/templates/ingresos/remitos/cpb_remito_listado.html
@@ -21,11 +21,11 @@
                         <thead>
                             <tr>
                                 <th class="no-sort text-center"></th>                                
-                                <th >Fecha CPB</th>                                
-                                <th>Nº CPB</th>
-                                <th>Cliente</th>
-                                <th>CPB Factura</th>
-                                <th>Descripción</th>                                
+                                <th class="imprimir">Fecha CPB</th>                                
+                                <th class="imprimir">Nº CPB</th>
+                                <th class="imprimir">Cliente</th>
+                                <th class="imprimir">CPB Factura</th>
+                                <th class="imprimir">Descripción</th>                                
                             </tr>
                         </thead>
                         <tbody>
@@ -158,16 +158,52 @@ var tabla = $('#dataTables-cpb_remito').DataTable({
                     extend:    'excel',
                     text:      '<i class="fa fa-file-excel-o"></i>',
                     titleAttr: 'Excel',
-                    exportOptions: { columns: ':visible', },
-
-                    className: 'btnToolbar',                    
+                    filename: 'REMITOS',                    
+                    exportOptions: {  modifier: {
+                                        page: 'current'
+                                    }, 
+                                      // columns: [ 0, 1, 2, 5 ]
+                                      columns: ['.imprimir'],
+                                      format: {
+                                      body: function(data, row, column, node) {
+                                        var floatVal = function (i) {
+                                            if (typeof i === "number") {
+                                                return i;
+                                            } else if (typeof i === "string") {
+                                                i = i.replace("$", "")
+                                                i = i.replace(",", "")
+                                                i = i.replace(".", "")
+                                                var result = parseFloat(i)/100;
+                                                // console.log(result);
+                                                if (isNaN(result)) {
+                                                    try {
+                                                        var result = $jq(i).text();
+                                                        result = parseFloat(result);
+                                                        if (isNaN(result)) { result = 0 };
+                                                        return result * 1;
+                                                    } catch (error) {
+                                                        return 0;
+                                                    }
+                                                } else {
+                                                    return result * 1;
+                                                }
+                                            } else {
+                                                alert("Unhandled type for totals [" + (typeof i) + "]");
+                                                return 0
+                                            }
+                                        };
+                                          data = $('<p>' + data + '</p>').text();
+                                          return (node.className=='importe') ? floatVal(data)  : data;
+                                      }
+                                    }},
+                    className: 'btnToolbar',     
                 },
                
                 {
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible'},
+                    exportOptions: { columns: '.imprimir'},
                     orientation: 'landscape',
                     className: 'btnToolbar',                    
                 },
@@ -175,7 +211,7 @@ var tabla = $('#dataTables-cpb_remito').DataTable({
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
