--- a/templates/productos/lista_depositos.html
+++ b/templates/productos/lista_depositos.html
@@ -18,9 +18,9 @@
                         <thead>
                             <tr>
                                 <th width="5%" ></th>
-                                <th width="5%" class="text-right">Id</th>
-                                <th>Nombre</th>               
-                                <th width="5%" class="text-left">Por Defecto</th>                
+                                <th width="5%" class="imprimir text-right">Id</th>
+                                <th class="imprimir">Nombre</th>               
+                                <th width="5%" class="imprimir text-left">Por Defecto</th>                
                             </tr>
                         </thead>
                         <tbody>
@@ -132,7 +132,7 @@ var tabla = $('#dataTables-primary').DataTable({
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -172,14 +172,14 @@ var tabla = $('#dataTables-primary').DataTable({
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
                 {
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
