--- a/templates/productos/producto_precios.html
+++ b/templates/productos/producto_precios.html
@@ -43,13 +43,13 @@
                             <tr>                                                               
                                 <th class="no-sort text-center"></th>
                                 <th class="no-sort text-center"> <input type="checkbox" id="checkall" title="Seleccionar Todas"/></th>
-                                <th class="">Producto</th>
-                                <th>Categoría</th>
-                                <th>TipoProd.</th>                                                                
-                                <th class="text-right">Precio Costo</th>
-                                <th class="text-right">Precio c/Imp.</th>
-                                <th class="text-right">Coef.Gan.</th>                                                               
-                                <th class="text-right">Precio Venta</th>                                                                                               
+                                <th class="imprimir">Producto</th>
+                                <th class="imprimir">Categoría</th>
+                                <th class="imprimir">TipoProd.</th>                                                                
+                                <th class="imprimir text-right">Precio Costo</th>
+                                <th class="imprimir text-right">Precio c/Imp.</th>
+                                <th class="imprimir text-right">Coef.Gan.</th>                                                               
+                                <th class="imprimir text-right">Precio Venta</th>                                                                                               
                             </tr>
                         </thead>
                         <tbody>                                                   
@@ -185,11 +185,11 @@ var tabla = $('#dataTables-lprecios').DataTable({
                     extend:    'excel',
                     text:      '<i class="fa fa-file-excel-o"></i>',
                     titleAttr: 'Excel',
-                    filename: 'VENTAS',                    
+                    filename: 'PRECIOS',                    
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -229,7 +229,7 @@ var tabla = $('#dataTables-lprecios').DataTable({
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible'},
+                    exportOptions: { columns: '.imprimir'},
                     orientation: 'landscape',
                     className: 'btnToolbar',                    
                 },
@@ -237,7 +237,7 @@ var tabla = $('#dataTables-lprecios').DataTable({
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
