--- a/templates/trabajos/orden_colocacion/oc_listado.html
+++ b/templates/trabajos/orden_colocacion/oc_listado.html
@@ -21,16 +21,16 @@
                             <tr>
                                 <th class="no-sort text-center"></th>
                                 <th class="no-sort text-center"></th>                                
-                                <th class="text-center">Estado</th>
-                                <th class="text-center">Fecha</th>                                
-                                <th>Número</th>
-                                <th>Cliente</th>                                
-                                <th>Nº Orden Trabajo</th>                                                              
-                                <th class="text-center">Fecha Vencimiento</th>                                 
-                                <th>Detalle</th>                                
-                                <th>Colocador</th>                                
-                                <th>Vendedor</th>
-                                <th>Usuario</th>
+                                <th class="imprimir text-center">Estado</th>
+                                <th class="imprimir text-center">Fecha</th>                                
+                                <th class="imprimir">Número</th>
+                                <th class="imprimir">Cliente</th>                                
+                                <th class="imprimir">NºOrd.Trab.</th>                                                              
+                                <th class="imprimir text-center">Fecha Venc.</th>                                 
+                                <th class="imprimir">Detalle</th>                                
+                                <th class="imprimir">Colocador</th>                                
+                                <th class="imprimir">Vendedor</th>
+                                <th class="imprimir">Usuario</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -173,7 +173,7 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -213,14 +213,14 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
                 {
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
