--- a/templates/trabajos/orden_pedido/op_listado.html
+++ b/templates/trabajos/orden_pedido/op_listado.html
@@ -25,16 +25,16 @@
                             <tr>
                                 <th class="no-sort text-center"></th>
                                 <th class="no-sort text-center"></th>                                
-                                <th class="text-center">Estado</th>
-                                <th class="text-center">Fecha</th>                                
-                                <th>Número</th>
-                                <th>Cliente</th>                                
-                                <th class="text-right">Total</th>                                                              
-                                <th class="text-center">Entrega</th> 
-                                <th class="text-center">Firma</th> 
-                                <th>Detalle</th>                                
-                                <th>Medio/Archivo</th>                                
-                                <th>Vendedor</th>
+                                <th class="imprimir text-center">Estado</th>
+                                <th class="imprimir text-center">Fecha</th>                                
+                                <th class="imprimir">Número</th>
+                                <th class="imprimir">Cliente</th>                                
+                                <th class="imprimir text-right">Total</th>                                                              
+                                <th class="imprimir text-center">Entrega</th> 
+                                <th class="imprimir text-center">Firma</th> 
+                                <th class="imprimir">Detalle</th>                                
+                                <th class="imprimir">Medio/Archivo</th>                                
+                                <th class="imprimir">Vendedor</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -182,7 +182,7 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     exportOptions: {  modifier: {
                                         page: 'current'
                                     }, 
-                                      columns: ':visible',
+                                      columns: '.imprimir',
                                       format: {
                                       body: function(data, row, column, node) {
                                         var floatVal = function (i) {
@@ -222,14 +222,14 @@ var tabla = $('#dataTables-cpb_venta').DataTable({
                     extend:    'pdfHtml5',
                     text:      '<i class="fa fa-file-pdf-o"></i>',
                     titleAttr: 'PDF',footer: true,
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
                 {
                     extend: 'print',
                     text:      '<i class="fa fa-print"></i>',
                     titleAttr: 'Imprimir',
-                    exportOptions: { columns: ':visible' },
+                    exportOptions: { columns: '.imprimir' },
                     className: 'btnToolbar',                    
                 },
             ],
